--- a/index.html
+++ b/index.html
@@ -112,12 +112,7 @@
                 <p>Photographer</p>
                 <a href="#work">VIEW MY WORK</a>
         </div>
-        <!-- <div class="schroll">
-                        <div class="img">
-                            <img src="./img/schroll.png" alt="">
-                        </div>
-                        <h4>schroll or drag</h4>
-                     </div> -->
+
     </div>
     <div class="mywork" id="work">
         <div class="header">
@@ -177,10 +172,7 @@
                 <div class="text">
                     <h1>Tamzid Farhad</h1>
                     <h2>Photographer</h2>
-                    <h3>An under-grad doing some non-professional(yet) work.
-                        I am a photographer-cum-lover who desperately wants to conquer the smiles and emotions of every
-                        heart through my mechanical eyes. Hearts that beat, searching for the soulful meaning of life.
-                    </h3>
+                    <h3>An under-grad doing non-professional(yet) photographer-cum-lover who desperately wants to conquer the smiles and emotions of every heart through my mechanical eyes. Hearts that beats, searching for the soulful meaning of life.</h3>
                     <h4>Thanks for making me the medium of bringing your moments to your respective homes.</h4>
                 </div>
             </div>
