--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
             <img src="./img/objects/11.JPG" alt="">
         </div>
         <div class="img">
-            <img src="./img/objects/17.JPG" alt="">
+            <img src="./img/wedding2/3.jpg" alt="">
         </div>
         <div class="img ">
-            <img src="./img/objects/6.JPG" alt="">
+            <img src="./img/products/4.jpg" alt="">
         </div>
     </div>
     <div class="content">
