--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
             <img src="./img/objects/16.JPG" alt="">
         </div>
         <div class="img">
-            <img src="./img/objects/11.JPG" alt="">
-        </div>
-        <div class="img">
             <img src="./img/wedding2/3.jpg" alt="">
         </div>
-        <div class="img ">
+        <div class="img">
             <img src="./img/products/4.jpg" alt="">
+        </div>
+        <div class="img ">
+            <img src="./img/objects/6.jpg" alt="">
         </div>
     </div>
     <div class="content">
